<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:weightSum="2"
        >

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:weightSum="2">
        <ImageView
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/ic_pharmacy"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hospital"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:gravity="center"/>
</LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2">
            <ImageView
                android:id="@+id/patient"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/patient" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/patients"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">
            <ImageView
                android:id="@+id/donor"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/admin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donor"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="64sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

</RelativeLayout>