<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_hosp_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/first_names"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_hosp_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_email"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hosp_name"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_hosp_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hosp_name"
            card_view:layout_constraintStart_toEndOf="@+id/tv_hosp_email_label"
            tools:text="@tools:sample/last_names"/>



        <TextView
            android:id="@+id/tv_hosp_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hosp_email_label"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_hosp_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hosp_email"
            card_view:layout_constraintStart_toEndOf="@+id/tv_hosp_address_label"
            tools:text="@tools:sample/cities"/>

        <Button
            android:id="@+id/iv_book_donation_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/book_slot"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hosp_address_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    

</com.google.android.material.card.MaterialCardView>