<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_presc_thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_consult_date"/>

        <TextView
            android:id="@+id/tv_consult_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consult_date"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintBottom_toTopOf="@+id/iv_share_presc"
            card_view:layout_constraintStart_toStartOf="@id/iv_presc_thumbnail"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_presc_thumbnail"/>
        <TextView
            android:id="@+id/tv_consult_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@tools:sample/date/ddmmyy"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toEndOf="@id/tv_consult_date"
            card_view:layout_constraintBottom_toTopOf="@+id/iv_share_presc"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_consult_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@tools:sample/lorem"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_presc_thumbnail"
            card_view:layout_constraintBottom_toTopOf="@+id/iv_share_presc"/>



        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="@tools:sample/first_names"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_doc_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_doc_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_patient_email_label"
            card_view:layout_constraintStart_toEndOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_doc_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_patient_email_label"
            card_view:layout_constraintStart_toEndOf="@+id/tv_doc_name_label"
            tools:text="@tools:sample/first_names"/>

        <TextView
            android:id="@+id/tv_patient_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_email"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_pharma_mobile_label"
            card_view:layout_constraintStart_toEndOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_patient_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_pharma_mobile_label"
            card_view:layout_constraintStart_toEndOf="@+id/tv_patient_email_label"
            tools:text="@tools:sample/last_names"/>

        <TextView
            android:id="@+id/tv_doctor_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_email"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_doc_name_label"
            card_view:layout_constraintStart_toEndOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_doctor_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_doc_name_label"
            card_view:layout_constraintStart_toEndOf="@+id/tv_doctor_email_label"
            tools:text="@tools:sample/last_names"/>

        <TextView
            android:id="@+id/tv_pharma_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_mobile"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_patient_name"
            card_view:layout_constraintStart_toEndOf="@+id/iv_presc_thumbnail"/>

        <TextView
            android:id="@+id/tv_pharma_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_patient_name"
            card_view:layout_constraintStart_toEndOf="@+id/tv_pharma_mobile_label"
            tools:text="@tools:sample/last_names"/>


        <ImageView
            android:id="@+id/iv_share_presc"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_pharmacy"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_consult_type"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_view_pharmacy"/>
        <TextView
            android:id="@+id/tv_view_pharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_pharma"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_share_presc"
            card_view:layout_constraintTop_toTopOf="@+id/iv_share_presc"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    

</com.google.android.material.card.MaterialCardView>